# insurance-claims-triage

./: .env.example  .gitignore  README.md  __init__.py  agent.py  graph.py  langgraph.json  pyproject.toml  requirements.txt  run.py  tools.py
.langgraph_api/: .langgraph_ops.pckl
claims/CLM-2024-001/: claim.json
claims/CLM-2024-002/: claim.json
claims/CLM-2024-003/: claim.json
data/: claimants.json
data/CLM-2024-001/: claim.json
data/CLM-2024-002/: claim.json
scripts/: generate_images.py  reset_queue.py  send_claim.py
src/: pyproject.toml
src/triage/: graph.py
subagents/: damage_assessor.py  fraud_detector.py  policy_verifier.py
