[project]
name = "insurance-claims-triage-deep-agent"
version = "0.1.0"
description = "Insurance claims triage demo using create_deep_agent"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
